--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -1,150 +1,149 @@
-# Dynamic Rendering (dynamic functions)
+# Dynamic Rendering - Cookies - Headers - Fetch
 
-### 💡 Comprendre le rendu dynamique
+### 💡 Dynamic Rendering - Cookies - Headers - Fetch
 
 ## 📝 Tes notes
 
-Detaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
+Détaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
 
 ## Comprendre
 
-La deuxième stratégie de rendu coté serveur des RSC est le rendu dynamique. Cobntrairement au rendu statique, le rendu dynamique régénère une nouvelle page sur chaque requête.
+Nous allons aborder 3 autres manières de rendre nos `RSC` Dynamiques.
 
-Ici nous allons explorer le rendu dynamique des composants serveur React avec Next.js. Grâce au rendu dynamique, les routes sont générées à la demande pour chaque utilisateur, ce qui permet de personnaliser les données en fonction des informations spécifiques à chaque requête, comme les cookies ou les paramètres de recherche de l'URL.
+- Via l’accès au headers (http)
+- Via l’accès aux cookies (http)
+- Via `Fetch` (option)
 
-Cette approche est particulièrement utile pour les sites web qui combinent des données mises en cache et des données non mises en cache, comme les pages de commerce électronique. Next.js gère automatiquement la meilleure stratégie de rendu pour chaque route, en tenant compte des fonctionnalités et des API utilisées, vous permettant ainsi de vous concentrer sur la mise en cache et la revalidation des données spécifiques.
+Pour accéder aux Headers Http :
 
-📑 Le liens vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering)
+```tsx
+import {headers} from 'next/headers'
+...
+const headersList = headers()
+const referer = headersList.get('referer')
+```
 
-Concrètement pour switcher vers du rendu dynamique il faut soit :
+📑 Le lien vers la doc [https://nextjs.org/docs/app/api-reference/functions/cookies](https://nextjs.org/docs/app/api-reference/functions/cookies)
 
-- Utiliser des [fonctions dynamiques](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) (données dépendantes de chaque requête)
-- Demander [le `uncache` des données.](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#opting-out-of-data-caching)
+Pour accéder aux Cookies :
 
-| Dynamic Functions | Data       | Route                |
-| ----------------- | ---------- | -------------------- |
-| No                | Cached     | Statically Rendered  |
-| Yes               | Cached     | Dynamically Rendered |
-| No                | Not Cached | Dynamically Rendered |
-| Yes               | Not Cached | Dynamically Rendered |
+```tsx
+import {cookies} from 'next/headers'
+...
+const cookieStore = cookies()
+```
+
+📑 Le lien vers la doc [https://nextjs.org/docs/app/api-reference/functions/headers](https://nextjs.org/docs/app/api-reference/functions/headers)
 
 ## Exercice
 
-Les fonctions dynamiques reposent sur des informations qui ne peuvent être connues qu'au moment de la requête, telles que les cookies d'un utilisateur, les en-têtes de requêtes en cours ou les paramètres de recherche de l'URL. Dans Next.js, ces API dynamiques
+👨‍✈️ Hugo, le chef de projet, nous informe que nous allons devoir filtrer les `posts` aux personnes qui sont connectées uniquement (qui ont un `cookies` avec `userid`).
 
-- [`cookies()`](https://rc.nextjs.org/docs/app/api-reference/functions/cookies)
-- [`headers()`](https://rc.nextjs.org/docs/app/api-reference/functions/headers)
-- [`unstable_noStore()`](https://rc.nextjs.org/docs/app/api-reference/functions/unstable_noStore)
-- [`unstable_after()`](https://rc.nextjs.org/docs/app/api-reference/functions/unstable_after):
-- [`params`](https://nextjs.org/docs/app/api-reference/file-conventions/page#searchparams-optional) et [`searchParams`](https://nextjs.org/docs/app/api-reference/file-conventions/page#searchparams-optional) [prop](https://rc.nextjs.org/docs/app/api-reference/file-conventions/page#searchparams-optional)
--
+Pour simuler les cookies tu peux aller dans Chrome / Inspecter / Application / Cookies et ajouter un cookie
 
-Dans cet exercice tu vas devoir créer un React Serveur Component qui affiche un post en particulier. Comme sur un blog, le nombre de post peut augmenter et il n’est pas possible de prédire à la compilation le nombre de `posts` total. Tu vas donc devoir faire du rendu dynamique.
-
-Les segments de routes dynamiques comme la notre : [`exercises/dynamic-rendering/[id]`](exercises/dynamic-rendering/1) vont créer automatiquement des rendus dynamiques.
-
-Appelle la fonction dynamique `getPostById` pour afficher un post particulier
+![Untitled](/course/Untitled.png)
 
 ```tsx
-import {getPostById} from '@/db/sgbd'
-const post = await getPostById(params.id)
+[Set cookies](/course/cookies.png)
 ```
 
-_ps : pense à cause où le post n’est pas trouvé_
+- 🐶 Adapte le composant actuel qui a un rendu statique en rendu dynamique en vérifiant la présence des cookies
+- Si pas de cookies `userid`—> pas de `post`
+- Si cookies `userid`—> affichage des `posts`
 
 Fichiers
 
-- `exercise/dynamic-rendering/[id]/page.tsx`
+- `/exercises/dynamic-rendering/cookies-headers/page.tsx`
 
 ## Bonus
 
-### 1. 🚀 Pré-génération de pages dynamiques (generateStaticParams)
+### 1. 🚀 Rendu Dynamique avec Headers
 
-Les appels aux sources de données et le rendu coté serveur peut parfois être long. Pour simuler cela dans notre page nous allons utiliser le bout de code suivant :
+👨‍✈️ Hugo, le chef de projet, te demande une règle un peu spéciale. Il te demande de ne pas afficher de `post` sur une version particulière du navigateur en se basant sur le `user-agent`. Tu peux retrouver les valeurs dans la requête HTTP
+
+![Untitled](/course/Untitled1.png)
 
 ```tsx
-const Page = async ({params}: {params: {id: string}}) => {
-  //2 secondes latency
-  await new Promise((resolve) => setTimeout(resolve, 2000))
-  ...
-
+[Set cookies](/course/useragent.png)
 ```
 
-- 👨‍✈️ Hugo le chef de projet te demande de pré-générer les pages contenant des posts grâce à la fonction `generateStaticParams`
+Pour filtrer la version 126, tu peux par exemple faire :
 
 ```tsx
-//page.tsx
-export function generateStaticParams() {
-  return [{ id: '1' }, { id: '2' }, { id: '3' }]
+!userAgent?.includes('Chrome/126.0.0.0')
+```
+
+🐶 Adapte le code pour filtrer ta version de navigateur
+
+- Si pas ta version —> pas de `post`
+- Si autres versions —> affichage des `posts`
+
+Fichiers
+
+- `/exercises/dynamic-rendering/cookies-headers/page.tsx`
+
+### 2. 🚀 Fetch
+
+[L’API Fetch](https://developer.mozilla.org/fr/docs/Web/API/Fetch_API/Using_Fetch) a des options pour garder les données en cache. (Mais il s’agit de la mémoire cache du navigateur)
+
+[Next étends](https://nextjs.org/docs/app/api-reference/functions/fetch) l’[api Fetch](https://developer.mozilla.org/fr/docs/Web/API/Fetch_API/Using_Fetch) permet de récupérer les données distantes et gérer les données en cache mais côté serveur.
+
+```tsx
+export default async function Page() {
+  // This request should be cached until manually invalidated.
+  // Similar to `getStaticProps`.
+  // `force-cache` is the default and can be omitted.
+  const staticData = await fetch(`https://...`, {cache: 'force-cache'})
+
+  // This request should be refetched on every request.
+  // Similar to `getServerSideProps`.
+  const dynamicData = await fetch(`https://...`, {cache: 'no-store'})
+
+  // This request should be cached with a lifetime of 10 seconds.
+  // Similar to `getStaticProps` with the `revalidate` option.
+  const revalidatedData = await fetch(`https://...`, {
+    next: {revalidate: 10},
+  })
+
+  return <div>...</div>
 }
 ```
 
-- 🐶Récupère la liste des post avec `getPosts` de `'@/db/sgbd’` et retourne tous les ids.
-
 <aside>
-💡 Constate avec la commande `build` que les routes `/exercises/dynamic-rendering/x` sont pré-générés.
+💡 Depuis Next 15.0.0 : Default cache option was changed from `'force-cache'` to `'no-store’`
 
 </aside>
 
-```tsx
-├ ○ /exercises/dynamic-rendering         175 B          95.3 kB
-├ ● /exercises/dynamic-rendering/[id]    146 B          88.5 kB
-├   ├ /exercises/dynamic-rendering/1
-├   ├ /exercises/dynamic-rendering/2
-├   ├ /exercises/dynamic-rendering/3
-├   └ [+3 more paths]
-├ ○ /exercises/static-rendering          146 B          88.5 kB
-└ ○ /instructions
-```
-
-<aside>
-💡 Constate que l’affichage est rapide malgré la latence simulée
-
-</aside>
-
-Fichiers
-
-- `exercise/dynamic-rendering/[id]/page.tsx`
-
-### 2. 🚀 revalidation
-
-👨‍✈️ Hugo le chef de projet nous indique que les `posts` peuvent être mis à jour de temps en temps par les rédacteurs. Mais dans le cas actuel, une fois les pages générées, elle ne sont plus mises à jour en cas de changement de données en BDD. (fais le test en changeant le `title` dans `db.json`)
-
-Ajoute le bout de code qui permet un revalidation des données après X secondes.
-
-📑 Le lien vers la doc : [https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation)
-
-Fichiers
-
-- `exercise/dynamic-rendering/[id]/page.tsx`
-
-### 3. 🚀 Search Params
-
-👨‍✈️ Hugo le chef de projet de demande de faire une autre route dans laquelle nous allons pouvoir filtrer des posts en query params par exemple avec `filter` et `text`[?filter=title&text=superpost](http://localhost:3000/exercises/dynamic-rendering/search-params?filter=title&text=a)
-
-- `filter :`le champs a filter
-- `text` : le terme de recherche
-
-Pour avoir des query params il faut utiliser ces props :
+Dans cet exercice bonus, supprime l’appel à `getPosts` et remplace le par un `fetch`
 
 ```tsx
-const Page = async ({
-  searchParams,
-}: {
-  searchParams: {[key: string]: string | string[] | undefined}
-}) => {
+const data = await fetch('https://jsonplaceholder.typicode.com/posts', ...
+//pense a tester les otions pour faire un rendu statique et dynamique
+const posts = await data.json()
 ```
 
-- **🐶 Le composant :** `exercise/dynamic-rendering/search-params/page.tsx` est statique par default. (constate le avec un `build/start` de production)
-- Adapte le pour le rendre dynamique grâce au `searchParams` et constate le rendu dynamique en production
+Constate lors de la compilation le changement de mode de rendu ƒ :
+
+```tsx
+├ ƒ /exercises/dynamic-rendering/cookies-headers  154 B          88.5 kB
+├ ○ /exercises/static-rendering                   154 B          88.5 kB
++ First Load JS shared by all                     88.4 kB
+  ├ chunks/162-85a026428100bb9c.js                32.1 kB
+  ├ chunks/92b01630-b398710d6ee562b5.js           54.4 kB
+  └ other shared chunks (total)                   1.86 kB
+
+○  (Static)   prerendered as static content
+●  (SSG)      prerendered as static HTML (uses getStaticProps)
+ƒ  (Dynamic)  server-rendered on demand
+```
 
 Fichiers
 
-- `exercise/dynamic-rendering/search-params/page.tsx`
+- `/exercises/dynamic-rendering/cookies-headers/page.tsx`
 
 ## Aller plus loin
 
-📑 Le lien vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/server-components#switching-to-dynamic-rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#switching-to-dynamic-rendering)
+📑 Le lien vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-functions](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-functions)
 
 ## Ils vont t’aider
 
@@ -156,4 +155,4 @@ Fichiers
 
 ## 🐜 Feedback
 
-Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=Rendering%20Avancée&entry.533578441=02%20dynamic-rendering-function).
+Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=04%20Rendering%20Avancée&entry.533578441=03%20dynamic-rendering-cookies).
